tests/errors/constExprOverflow.milo
// @error: constant expression '2147483647 + 1' overflows i32

fn main(): i32 {
    let x = 2147483647 + 1
    return 0
}
